--- a/_packages/quickbar-0.5.0-pl/modCategory/4b22baf968f88371c3576ad9c420959a/0/quickbar/docs/CHANGELOG.txt
+++ b/_packages/quickbar-0.5.0-pl/modCategory/4b22baf968f88371c3576ad9c420959a/0/quickbar/docs/CHANGELOG.txt
@@ -3,6 +3,10 @@ Changelog for QuickBar integration into MODx Revolution.
 QuickBar 0.5.0
 ====================================
  - added to GitHub and now packaged using a build script (rather than PackMan)
+ - QuickBar stylesheet now dynamically added to head tag
+ - added white-space:nowrap to the li code
+ - now supports CSS resets that use * { box-sizing:border-box }
+ - removed getMgrURL Snippet
 
 QuickBar 0.4.4
 ====================================
