--- a/core/components/quickbar/docs/CHANGELOG.txt
+++ b/core/components/quickbar/docs/CHANGELOG.txt
@@ -1,5 +1,13 @@
 Changelog for QuickBar integration into MODx Revolution.
 
+QuickBar 1.0.2
+====================================
+ - Added purplerain theme
+
+QuickBar 1.0.1
+====================================
+ - Bug fixes
+
 QuickBar 1.0.0
 ====================================
  - Reduced elements Quickbar adds to tree
