--- a/core/components/quickbar/docs/CHANGELOG.txt
+++ b/core/components/quickbar/docs/CHANGELOG.txt
@@ -1,5 +1,9 @@
 Changelog for QuickBar integration into MODx Revolution.
 
+QuickBar 1.0.4
+====================================
+ - Update quickbar.chunk.tpl #18 (thanks to sottwell for the PR)
+
 QuickBar 1.0.3
 ====================================
  - Simplify authentication logic
